--- a/views/list.ejs
+++ b/views/list.ejs
@@ -77,13 +77,14 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 <body>
     <h2>Note from UET, Hello</h2><h1 color:"red;"> <%=username%></h1>
     <div>
-    <form method="post">
-        <div>
-        <textarea name="textdata" cols="120" rows="25"> <%=textdata%> </textarea>
-        </div>
-        <input name="id" type="hidden" value=<%=id%>>
-        <button type="submit">Save</button>
-    </form>
+    <ul>
+        <a href="http://www.localhost:9999/dashboard/1<%list[0].stt%>"><li><%=text[0]%></li></a>
+        <li><%=text[1]%></li>    
+
+    </ul>
     </div>
 </body>
 </html>
+
+  
+  
