--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -67,6 +67,24 @@ input {
 	-ms-transition: box-shadow .5s ease;
 	transition: box-shadow .5s ease;
 }
+a:link {
+    color: green;
+}
+
+/* visited link */
+a:visited {
+    color: green;
+}
+
+/* mouse over link */
+a:hover {
+    color: hotpink;
+}
+
+/* selected link */
+a:active {
+    color: green;
+}
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
 
     </style>
@@ -75,6 +93,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 
 </head>
 <body>
+    <a href="/logout"><p>logout</p></a> 
     <h2>Note from UET, Hello</h2><h1 color:"red;"> <%=username%></h1>
     <div>
     <form method="post">
