--- a/views/list.ejs
+++ b/views/list.ejs
@@ -67,6 +67,24 @@ input {
 	-ms-transition: box-shadow .5s ease;
 	transition: box-shadow .5s ease;
 }
+a:link {
+    color: green;
+}
+
+/* visited link */
+a:visited {
+    color: green;
+}
+
+/* mouse over link */
+a:hover {
+    color: hotpink;
+}
+
+/* selected link */
+a:active {
+    color: green;
+}
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
 
     </style>
@@ -75,14 +93,16 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 
 </head>
 <body>
-    <h2>Note from UET, Hello</h2><h1 color:"red;"> <%=username%></h1>
-    <div>
-    <ul>
-        <a href="http://www.localhost:9999/dashboard/1<%list[0].stt%>"><li><%=text[0]%></li></a>
-        <li><%=text[1]%></li>    
-
-    </ul>
-    </div>
+	<a href="/logout"><p>logout</p></a> 
+	<h2>Note from UET, Hello</h2><h1 color:"red;"> <%=username%></h1>
+    <ol>
+		<% for(var i=0;i<length;i++){%>
+			<% link = "/dashboard/"+list[i].stt%>
+			<a href=<%=link%>><li><%=text[i]%></li></a>
+		<%}%>
+			<% link = "/dashboard/9999"%>
+			<a href=<%=link%>><li>NEW</li></a>
+    </ol>
 </body>
 </html>
 
